fix sidebard on mobile

--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -175,7 +175,10 @@ li.current {
 }
 
 .fixed-toc {
-  width: auto;
-  left: auto;
-  top: auto;
+  @media #{$large-up} {
+    width: auto;
+    left: auto;
+    top: auto;
+    position: fixed;
+  }
 }
